2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: reverted !c:/bin/foo fix, made % in
        multiline specials work again

2007-08-13  Ville Vainio  <vivainio@gmail.com>

	* prefilter.py: Take more care to special-case !, so that
        !c:/bin/foo.exe works.
        
        * setup.py: if we are building eggs, strip all docs and
        examples (it doesn't make sense to bytecompile examples,
        and docs would be in an awkward place anyway).
        
        * Ryan Krauss' patch fixes start menu shortcuts when IPython
        is installed into a directory that has spaces in the name.

2007-08-13  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_doctest_mode): fix prompt separators in
	doctest profile and %doctest_mode, so they actually generate the
	blank lines needed by doctest to separate individual tests.

	* IPython/iplib.py (safe_execfile): modify so that running code
	which calls sys.exit(0) (or equivalently, raise SystemExit(0))
	doesn't get a printed traceback.  Any other value in sys.exit(),
	including the empty call, still generates a traceback.  This
	enables use of %run without having to pass '-e' for codes that
	correctly set the exit status flag.

2007-08-12  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/iplib.py (InteractiveShell.post_config_initialization):
	fix problems with doctests failing when run inside IPython due to
	IPython's modifications of sys.displayhook.

2007-8-9  Fernando Perez  <fperez@planck.colorado.edu>

        * IPython/ipapi.py (to_user_ns): update to accept a dict as well as
          a string with names.

2007-08-09  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Magic.py (magic_doctest_mode): added new %doctest_mode
	magic to toggle on/off the doctest pasting support without having
	to leave a session to switch to a separate profile.

2007-08-08  Fernando Perez  <Fernando.Perez@colorado.edu>
